Refactored Drinks table and DAOs to Review and ReviewDAO.
Also some minor style checks